tests/error/struct_errors/repeated_generic.err
Error: Duplicate type parameter (at $FILE:13:26)
   | 
11 | 
12 | @guppy.struct
13 | class MyStruct(Generic[X, X]):
   |                           ^ Type parameter `X` cannot be used multiple times

Guppy compilation failed due to 1 previous error
